--- a/bower.json
+++ b/bower.json
@@ -12,6 +12,8 @@
     "jquery": "*",
     "handlebars": "^4.0.5",
     "components-font-awesome": "^4.7.0",
-    "es6-promise": "^4.0.5"
+    "es6-promise": "^4.0.5",
+    "jquery-legacy": "jquery#1.12.4",
+    "jquery-modern": "jquery#3.1.1"
   }
 }
